CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(oncreate)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/external/cmake_modules")
FIND_PACKAGE(BRICS_3D REQUIRED)
FIND_PACKAGE(Boost COMPONENTS regex)
FIND_PACKAGE(Eigen REQUIRED)
ADD_DEFINITIONS(-DEIGEN3)

# search for LibVariant to parse JSON files
OPTION(USE_JSON "Enable JSON Support. Requires libvariant to be installed." ON)
IF(USE_JSON)  
    FIND_PACKAGE(LibVariant)
    IF (LIBVARIANT_FOUND)
      MESSAGE(STATUS "SUCCESSFUL: LIBVARIANT_FOUND found")
      ADD_DEFINITIONS(-DJSON_ENABLE)     
      INCLUDE_DIRECTORIES(${LIBVARIANT_INCLUDE_DIRS})
    ELSE (LIBVARIANT_FOUND)
      MESSAGE(SEND_ERROR "WARNING: LIBVARIANT_FOUND not found.")
    ENDIF (LIBVARIANT_FOUND)
	SET(JSON_LIBS ${LIBVARIANT_LIBRARIES})
ELSE(USE_JSON)
	SET(JSON_LIBS "")	
ENDIF (USE_JSON)


# add include directories (-I)
INCLUDE_DIRECTORIES(${BRICS_3D_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${EIGEN_INCLUDE_DIR})

# add library directories (-L)
LINK_DIRECTORIES(${BRICS_3D_LINK_DIRECTORIES})

# compile and link the executables
ADD_LIBRARY(oncreate SHARED oncreate.cpp)
SET_TARGET_PROPERTIES(oncreate PROPERTIES PREFIX "") 
TARGET_LINK_LIBRARIES(oncreate ${BRICS_3D_LIBRARIES} ${Boost_LIBRARIES} ${MICROBLX_LIBRARIES} ${JSON_LIBS})


