CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(osgvisualizer)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../external/cmake_modules")
FIND_PACKAGE(BRICS_3D REQUIRED)
FIND_PACKAGE(Microblx REQUIRED)
FIND_PACKAGE(Boost COMPONENTS regex thread)
FIND_PACKAGE(Eigen REQUIRED)
FIND_PACKAGE(OpenSceneGraph COMPONENTS osgGA osgUtil osgViewer osgText)
ADD_DEFINITIONS(-DEIGEN3)

# search for LibVariant to parse JSON files
OPTION(USE_JSON "Enable JSON Support. Requires libvariant to be installed." ON)
IF(USE_JSON)  
    FIND_PACKAGE(LibVariant)
    IF (LIBVARIANT_FOUND)
      MESSAGE(STATUS "SUCCESSFUL: LIBVARIANT_FOUND found")
      ADD_DEFINITIONS(-DJSON_ENABLE)     
      	INCLUDE_DIRECTORIES({LIBVARIANT_INCLUDE_DIRS})
    ELSE (LIBVARIANT_FOUND)
      MESSAGE(SEND_ERROR "WARNING: LIBVARIANT_FOUND not found.")
    ENDIF (LIBVARIANT_FOUND)
	SET(JSON_LIBS ${LIBVARIANT_LIBRARIES})
ELSE(USE_JSON)
	SET(JSON_LIBS "")	
ENDIF (USE_JSON)

ADD_DEFINITIONS(-DENABLE_OSG)
list(APPEND OSG_LIBRARIES
    ${OSG_LIBRARY_DEBUG}
	${OSGGA_LIBRARY_DEBUG}
	${OSGVIEWER_LIBRARY_DEBUG}
	${OSGUTIL_LIBRARY_DEBUG}
	${OSGTEXT_LIBRARY_DEBUG}
)	

# add include directories (-I)
INCLUDE_DIRECTORIES(${BRICS_3D_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${MICROBLX_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${EIGEN_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})

# add library directories (-L)
LINK_DIRECTORIES(${BRICS_3D_LINK_DIRECTORIES})

# compile and link the executables
ADD_LIBRARY(osgvisualizer SHARED osgvisualizer.cpp)
SET_TARGET_PROPERTIES(osgvisualizer PROPERTIES PREFIX "") 
TARGET_LINK_LIBRARIES(osgvisualizer ${BRICS_3D_LIBRARIES} ${MICROBLX_LIBRARIES} ${JSON_LIBS} ${OSG_LIBRARIES} ${Boost_LIBRARIES})


