CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(osmloader)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/external/cmake_modules")
FIND_PACKAGE(BRICS_3D REQUIRED)
FIND_PACKAGE(Microblx REQUIRED)
FIND_PACKAGE(Eigen REQUIRED)
FIND_PACKAGE(Xerces REQUIRED)
ADD_DEFINITIONS(-DEIGEN3)

# add include directories (-I)
INCLUDE_DIRECTORIES(${BRICS_3D_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${MICROBLX_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${EIGEN_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${XERCES_INCLUDE_DIR})

# add library directories (-L)
LINK_DIRECTORIES(${BRICS_3D_LINK_DIRECTORIES})

# compile and link the executables
ADD_LIBRARY(osmloader SHARED osmloader.cpp)
SET_TARGET_PROPERTIES(osmloader PROPERTIES PREFIX "")

IF(USE_OSG) 
    TARGET_LINK_LIBRARIES(osmloader ${Boost_LIBRARIES} ${BRICS_3D_LIBRARIES} ${MICROBLX_LIBRARIES} ${OSG_LIBRARIES} ${XERCES_LIBRARIES})
ELSE(USE_OSG)
    TARGET_LINK_LIBRARIES(osmloader ${Boost_LIBRARIES} ${BRICS_3D_LIBRARIES} ${MICROBLX_LIBRARIES} ${XERCES_LIBRARIES}) 
ENDIF(USE_OSG)