CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(roifilter)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/external/cmake_modules")
#FIND_PACKAGE(BRICS_3D REQUIRED)
FIND_PACKAGE(Microblx REQUIRED)
#FIND_PACKAGE(Eigen REQUIRED)
#ADD_DEFINITIONS(-DEIGEN3)

# add include directories (-I)
#INCLUDE_DIRECTORIES(${BRICS_3D_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${MICROBLX_INCLUDE_DIR})
#INCLUDE_DIRECTORIES(${EIGEN_INCLUDE_DIR})

# add library directories (-L)
#LINK_DIRECTORIES(${BRICS_3D_LINK_DIRECTORIES})

# compile and link the executables
ADD_LIBRARY(rsg_types SHARED rsg_types)
SET_TARGET_PROPERTIES(rsg_types PROPERTIES PREFIX "") 
TARGET_LINK_LIBRARIES(rsg_types ${MICROBLX_LIBRARIES})


